<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DataAndSpeedActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.github.aakumykov.seek_bar_with_text_input.SeekBarWithTextInput
            android:id="@+id/dataSizeSlider"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            app:max="1048576"
            app:progress="102400"
            app:hideTextInput="true"
            />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0">
            <RadioButton
                android:id="@+id/dataSizeBytes"
                android:text="@string/size_bytes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/dataSizeKilobytes"
                android:text="@string/size_kilobytes_bytes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/dataSizeMegabytes"
                android:text="@string/size_megabytes_bytes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0">
            <RadioButton
                android:id="@+id/speedBytes"
                android:text="@string/speed_bytes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/speedKilobytes"
                android:text="@string/speed_kilobytes_bytes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/speedMegabytes"
                android:text="@string/speed_megabytes_bytes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </RadioGroup>

        <com.github.aakumykov.seek_bar_with_text_input.SeekBarWithTextInput
            android:id="@+id/speedSlider"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            app:max="1048576"
            app:progress="102400"
            app:hideTextInput="true"
            />
    </LinearLayout>

    <Button
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:backgroundTint="#4DB6AC"
        android:textColor="@color/white"
        android:text="@string/button_start" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:backgroundTint="#FFA726"
        android:textColor="@color/white"
        android:text="@string/button_stop" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        />

    <TextView
        android:id="@+id/errorView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:textColor="@color/error"
        android:focusable="false"
        tools:text="Ошибка" />

    <ScrollView
        android:id="@+id/infoScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false">
        <TextView
            android:id="@+id/infoView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:textSize="12sp"
            android:focusable="false"
            tools:text="Инфа" />
    </ScrollView>-->

</LinearLayout>